@@ -277,7 +277,8 @@ public class Ogr2OgrFormatTest {
     protected void print(Document dom) throws Exception {
         TransformerFactory txFactory = TransformerFactory.newInstance();
         try {
-            txFactory.setAttribute("{http://xml.apache.org/xalan}indent-number", new Integer(2));
+            txFactory.setAttribute(
+                    "{http://xml.apache.org/xalan}indent-number", Integer.valueOf(2));
         } catch (Exception e) {
             // some
         }
